<resources>
    <string name="app_name">满e刷</string>
    <string name="versionNo">V2.0</string>
    <string name="sure_logout">确定要退出汇鑫宝么？</string>
    <string name="back">返回</string>
    <string name="bank_card_no">银行卡号</string>
     <string name="withdrawal">提现金额</string>
     <string name="pay_password">支付密码</string>
     <string name="transfer_remarks">备注(可选)</string>
     <string name="withdraw_explain">提现说明</string>
    <string name="select_card_type">请选择刷卡器的类型</string>
    <string name="app_close">尚未开通</string>
    <string name="unbind_card">请先绑定刷卡器！</string>
    <string name="unbind_card_pass">请绑定银行卡通过后再操作</string>
    <string name="not_support_card">暂时还不支持该刷卡器</string>
    <string name="quick_pay">快捷支付</string>
    <string name="client_recharge_card_info_confirm">信息确认</string>
    <string name="account_check_info">请核对商户信息</string>
    <string name="account_tip">* 每日提现按照以上商户信息清算</string>
    <string name="app_company">\n汇鑫商业保理有限公司\nCopyright©2004-2015\nAll Rights Reserved</string>
    <string name="phone_number">手机号</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="remember_account">记住帐号</string>
    <string name="ok">确定</string>
    <string name="next">下一步</string>
    <string name="cancel">取消</string>
    <string name="amount">金 额：</string>
    <string name="cashback_amount">提款</string>
    <string name="cashin_check_info">请核对刷卡消费信息</string>
    <string name="bankCardPwd">银行卡密码:</string>
    <string name="inputbankCardPwd">请输入银行卡密码</string>
    <string name="check_card">开始</string>
    <string name="client_result_recharge_trade_amount">消费金额:</string>
    <string name="cashin_trade_reminder">* 消费成功后，会发送消费短信给用户，此短信免费</string>
    <string name="pay">支付</string>
     <string name="ori_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="inputPassWord">6–15个数字、字母或特殊符号</string>
    <string name="inputSecondTime">请再次输入密码</string>
    <string name="submit">提交</string>
    <string name="hintPhonenumber">请输入手机号,将作为登录账号</string>
    <string name="confirmationCode">手机验证码</string>
    <string name="hintInputCode">请输入验证码</string>
    <string name="getConfirmationCode">获取验证码</string>
    <string name="agree">同意</string>
    <string name="brush_pay">刷卡支付</string>
    <string name="pay_style">支付方式:</string>
    <string name="please_input">请输入</string>
    <string name="confrim_pay">确认支付</string>
    <string name="call_your_bank">请致电您的银行</string>
    <string name="approved">已批准</string>
    <string name="declined">拒绝</string>
    <string name="enter_user_pwd">登录密码</string>
    <string name="register">注册</string>
    <string name="cashin">收款</string>
    <string name="success">交易成功</string>
	<string name="quit_app">再按一次,退出程序</string>
	<string name="select_bankbranch">选择支行地址</string>
	<string name="name_is_chinese">姓名必须是中文</string>
    <string name="data_parse_exception">数据解析错误！</string>
    <string name="default_dialog_msg">请稍后...</string>
    <string name="get_device_info_failed">获取设备信息失败 ：</string>
    <string name="connect_failed">连接失败原因: </string>
    <string name="waiting_for_card">请刷卡或插入ICC卡</string>
    <string name="no_card_detected">刷卡或插卡已超时\n请按开始再试一次</string>
    <string name="icc_card_inserted">ICC卡已插入</string>
    <string name="card_inserted">不是正确的ICC卡\n请按开始再试一次</string>
    <string name="bad_swipe">刷卡不良好\n请再试刷卡</string>
    <string name="card_swiped">刷卡成功</string>
    <string name="mag_head_fail">磁头启动失败</string>
    <string name="card_no_response">刷卡或插卡不正常\n请按开始再试一次</string>
    <string name="card_swiped_track2_only">已刷卡（只有磁轨2）：\n</string>
    <string name="nfc_track2">已拍卡 (模拟磁轨2)：\n</string>
    <string name="use_icc_card">请使用ICC卡</string>
    <string name="format_id">格式ID： </string>
    <string name="masked_pan">屏蔽卡号：</string>
    <string name="pan">卡号：</string>
    <string name="expiry_date">到期日： </string>
    <string name="cardholder_name">持卡人姓名： </string>
    <string name="ksn">KSN：</string>
    <string name="pin_ksn">密码KSN：</string>
    <string name="track_ksn">磁轨KSN：</string>
    <string name="emv_ksn">EMV KSN：</string>
    <string name="epb">EPB：</string>
    <string name="uid">UID：</string>
    <string name="csn">CSN：</string>
    <string name="service_code">服务代码： </string>
    <string name="track_1_length">磁轨1长度 ：</string>
    <string name="track_2_length">磁轨2长度 ：</string>
    <string name="track_3_length">磁轨3长度 ：</string>
    <string name="encrypted_tracks">加密磁轨：</string>
    <string name="encrypted_track_1">加密磁轨1：</string>
    <string name="encrypted_track_2">加密磁轨2：</string>
    <string name="encrypted_track_3">加密磁轨3：</string>
    <string name="partial_track">部分磁轨： </string>
    <string name="track_encoding">磁轨编码：</string>
    <string name="final_message">最终讯息：</string>
    <string name="random_number">随机数：</string>
    <string name="encrypted_working_key">加密工作密钥：</string>
    <string name="setting_config">正在载入设置&#8230;</string>
     <string name="cancel_check_card_success">取消读卡成功</string>
    <string name="cancel_check_card_fail">取消读卡失败</string>
    <string name="encrypted_card_data">加密卡数据：</string>
    <string name="encrypted_card_data_random_number">加密卡数据随机数：</string>
    <string name="encrypted_pan">加密卡号：</string>
    <string name="encrypted_pan_random_number">加密卡号随机数：</string>
    <string name="pan_sequence_number">卡号序列：</string>
    <string name="mac_data">MAC资料：</string>
    <string name="mac_random_number">MAC随机数：</string>
    <string name="fail">失败</string>
    <string name="verify_id">请验证持卡人身份</string>
    <string name="receipt_data">单据资料：</string>
    <string name="cardholder_certificate">持卡人证件号：</string>
    <string name="certificate_type">持卡人证件类型：</string>
    <string name="exchanging_apdu">正在交换APDU&#8230;</string>
    <string name="auto_config">自动配置</string>
    <string name="auto_configuring">自动配置中&#8230;</string>
    <string name="auto_config_completed">完成自动适配</string>
    <string name="settings">配置：</string>
    <string name="default_settings">默认设置</string>
    <string name="settings_written_to_external_storage">设置写入到外部存储</string>
    <string name="auto_config_error_phone_not_supported">自动适配错误：不支持手机型号</string>
    <string name="auto_config_error_interrupted">自动适配错误：被中断</string>
    <string name="canceling_auto_config">正在取消自动设置&#8230;</string>
	<string name="transaction_result">交易结果</string>
    <string name="transaction_approved">成功</string>
    <string name="transaction_terminated">终止</string>
    <string name="transaction_declined">不成功</string>
    <string name="transaction_cancel">取消</string>
    <string name="transaction_capk_fail">不成功〔CAPK失败〕</string>
    <string name="transaction_not_icc">Fail (Not ICC card)</string>
    <string name="transaction_card_blocked">卡被锁</string>
    <string name="transaction_app_fail">不成功〔App失败〕</string>
    <string name="transaction_device_error">装置错误</string>
    <string name="missing_mandatory_data">缺少必要的数据</string>
    <string name="apdu_result">APDU结果：</string>
    <string name="atr">ATR：</string>
    <string name="apdu_failed">APDU失败</string>
    <string name="sending">传送：</string>
    <string name="atr_length">ATR长度：</string>
    <string name="get_ksn">获取KSN</string>
    <string name="getting_ksn">正在取得KSN&#8230;</string>
    <string name="powering_on_icc">ICC正在上电&#8230;</string>
    <string name="powering_off_icc">ICC正在关闭&#8230;</string>
    <string name="card_not_supported">不支持的卡</string>
    <string name="start_emv_fail">EMV启动不成功</string>
    <string name="start_emv_success">EMV启动成功</string>
     <string name="no_emv_apps">无EMV应用程序</string>
    <string name="invalid_icc_data">无效的ICC数据</string>
    <string name="condition_not_satisfied">条件未符合</string>
    <string name="application_blocked">应用程序被锁</string>
    <string name="power_on_nfc">NFC上电</string>
    <string name="power_off_nfc">关闭NFC</string>
    <string name="data_exchange">数据互换</string>
    <string name="icc_card_removed">卡已被移走</string>
    <string name="batch_data">批量数据：\n</string>
    <string name="transaction_log">交易日志：\n</string>
    <string name="reversal_data">反转数据：\n</string>
     <string name="please_select_app">请选择App</string>
     <string name="request_terminal_time">要求终端时间。已回覆</string>
     <string name="amount_ok">金额OK？</string>
    <string name="cancel_or_enter">输入或取消</string>
    <string name="card_error">卡错误</string>
    <string name="enter_amount">请输入金额</string>
    <string name="incorrect_pin">密码不正确</string>
    <string name="insert_card">请插卡</string>
    <string name="not_accepted">不接受</string>
    <string name="pin_ok">密码正确</string>
    <string name="wait">请稍候&#8230;</string>
     <string name="processing_error">处理错误</string>
    <string name="remove_card">交易结束，请取回卡</string>
    <string name="use_chip_reader">请使用芯片读取器</string>
    <string name="use_mag_stripe">请使用磁条</string>
    <string name="refer_payment_device">请参阅您的付款装置</string>
    <string name="try_another_interface">请尝试另一个接口</string>
    <string name="online_required">需要在线</string>
    <string name="processing">处理中&#8230;</string>
    <string name="welcome">欢迎</string>
    <string name="present_one_card">请只出示一张卡</string>
    <string name="capk_failed">CAPK加载失败</string>
    <string name="last_pin_try">最后密码尝试</string>
    <string name="battery_low">装置电量不足，请充电</string>
    <string name="battery_critically_low">装置电量严重不足并已断电</string>
    <string name="no_device_detected">装置未插上</string>
    <string name="device_plugged">侦测到装置</string>
    <string name="device_unplugged">请插入装置</string>
    <string name="command_not_available">命令不可用</string>
    <string name="device_no_response">装置无响应</string>
    <string name="device_reset">装置已重置</string>
    <string name="unknown_error">未知的错误</string>
    <string name="device_busy">装置忙碌</string>
    <string name="out_of_range">超出范围的输入。</string>
    <string name="invalid_format">输入格式无效。</string>
    <string name="zero_values">输入是零值。</string>
    <string name="input_invalid">输入无效。</string>
    <string name="cashback_not_supported">不支持提款。</string>
     <string name="try_again">再试一次</string>
     <string name="advice_process">咨询过程。</string>
     <string name="crc_error">CRC错误。</string>
    <string name="comm_error">通讯错误。</string>
    <string name="device_off">装置已待机。</string>
    <string name="get_info">获取装置信息</string>
    <string name="clear_log">清除日志</string>
    <string name="urgent_notice">紧急公告</string>
    <string name="notice_message">有新的紧急公告</string>
    <string name="no_tips">不再提示</string>
    <string name="go_to">去查看</string>
     <string name="hint_editText">点击输入卡号</string>
    <string name="exit">再按一次退出</string>
    <string name="toast_momery">建议内存1GB,否则将影响使用体验</string>
    <string name="toast_flash">当前设备不支持闪光灯</string>
    <string name="toast_camera">无法启用相机</string>
    <string name="only">您还可以免费使用</string>
    <string name="time">次</string>
    <string name="free">次</string>
    <string name="times">次</string>
     <string name="bootloader_version">引导程序版本：</string>
    <string name="firmware_version">固件版本：</string>
    <string name="usb">USB：</string>
    <string name="charge">充电：</string>
    <string name="battery_level">电池电量：</string>
    <string name="battery_percentage">电量百份比：</string>
    <string name="hardware_version">硬件版本：</string>
    <string name="supported_track">支持磁轨：</string>
    <string name="track_1_supported">支持磁轨1：</string>
    <string name="track_2_supported">支持磁轨2：</string>
    <string name="track_3_supported">支持磁轨3：</string>
    <string name="unknown">未知</string>
    <string name="set_amount">输入金额</string>
    <string name="enter_pin">请输入密码</string>
    <string name="card_number">卡号:</string>
    <string name="request_check_online_connectivity">在线请求。</string>
    <string name="select_online_response">请选择一个响应。</string>
    <string name="replied_success">回覆已成功</string>
    <string name="replied_failed">回覆已失败</string>
    <string name="replied">回覆：</string>
    <string name="replied_connected">回覆已连线</string>
    <string name="request_online_process">向服务器请求数据。</string>
</resources>